--- a/debian/control
+++ b/debian/control
@@ -59,6 +59,7 @@ Depends: libktpcommoninternals9 (= ${binary:Version}),
          libktplogger9 (= ${binary:Version}),
          libktpotr9 (= ${binary:Version}),
          libktpwidgets9 (= ${binary:Version}),
+         libtelepathy-logger-qt-dev (>= 0.9.80),
          ${misc:Depends}
 Breaks: libktpcommoninternalsprivate-dev (<< 15.03.80)
 Replaces: libktpcommoninternalsprivate-dev (<< 15.03.80)
