add new optional deps

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: cmake,
                kio-dev,
                libaccounts-qt5-dev,
                libgcrypt20-dev,
+               libkaccounts-dev,
                libkf5attica-dev,
                libkf5auth-dev,
                libkf5bookmarks-dev,
@@ -31,6 +32,7 @@ Build-Depends: cmake,
                libkf5notifications-dev,
                libkf5notifyconfig-dev,
                libkf5parts-dev,
+               libkf5people-dev,
                libkf5service-dev,
                libkf5solid-dev,
                libkf5sonnet-dev,
