--- a/debian/control
+++ b/debian/control
@@ -42,7 +42,7 @@ Build-Depends: cmake,
                libkf5windowsystem-dev,
                libkf5xmlgui-dev,
                libotr5-dev,
-               libtelepathy-logger-qt5-dev (>= 0.9.80),
+               libtelepathy-logger-qt5-dev,
                libtelepathy-qt5-dev,
                pkg-kde-tools (>> 0.15.15),
                qtbase5-dev,
