Update build-deps and deps with the info from cmake

--- a/debian/control
+++ b/debian/control
@@ -5,13 +5,13 @@ Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Diane Trout <diane@ghic.org>,
            Michał Zając <quintasan@kubuntu.org>,
            Mark Purcell <msp@debian.org>
-Build-Depends: cmake,
+Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                doxygen,
-               extra-cmake-modules,
+               extra-cmake-modules (>= 0.0.11~),
                gettext,
                kio-dev,
-               libaccounts-qt5-dev,
+               libaccounts-qt5-dev (>= 1.10~),
                libkaccounts-dev,
                libkf5attica-dev,
                libkf5auth-dev,
@@ -32,7 +32,7 @@ Build-Depends: cmake,
                libkf5notifications-dev,
                libkf5notifyconfig-dev,
                libkf5parts-dev,
-               libkf5people-dev,
+               libkf5people-dev (>= 0.5~),
                libkf5service-dev,
                libkf5solid-dev,
                libkf5sonnet-dev,
@@ -42,9 +42,9 @@ Build-Depends: cmake,
                libkf5widgetsaddons-dev,
                libkf5windowsystem-dev,
                libkf5xmlgui-dev,
-               libotr5-dev,
+               libotr5-dev (>= 4.0.0~),
                libtelepathy-logger-qt-dev (>= 0.9.80),
-               libtelepathy-qt5-dev,
+               libtelepathy-qt5-dev (>= 0.9.2.1~),
                pkg-kde-tools (>> 0.15.15),
                qtbase5-dev,
                qtdeclarative5-dev
