--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: ktp-common-internals
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
-Uploaders: Diane Trout <diane@ghic.org>, Michał Zając <quintasan@kubuntu.org>, Mark Purcell <msp@debian.org>
+Uploaders: Diane Trout <diane@debian.org>, Michał Zając <quintasan@kubuntu.org>, Mark Purcell <msp@debian.org>
 Build-Depends: debhelper (>= 9), cmake,
  libtelepathy-qt4-dev (>= 0.9.5),
  libtelepathy-logger-qt4-dev (>= 0.8.0),
