Update build-dependencies according to cmake rules.
* Update build-dependencies according to cmake rules.
  - Bump libkpeople-dev version to >= 0.5.0
  - Add extra-cmake-modules, qtdeclarative5-dev,
    libkf5coreaddons-dev, libkf5notifcations-dev, kio-dev,
    libkf5widgetsaddons-dev, libkf5kcmutils-dev,
    libkf5notifyconfig-dev, libkf5texteditor-dev, libkf5wallet-dev,
    libkf5config-dev libkf5windowsystem-dev, libkf5iconthemes-dev,
    libaccounts-qt5-dev >= 1.10

--- a/debian/control
+++ b/debian/control
@@ -8,10 +8,24 @@ Build-Depends: debhelper (>= 9), cmake,
  libtelepathy-logger-dev,
  pkg-kde-tools,
  kdelibs5-dev,
- libkpeople-dev (>= 0.3.0),
+ libkpeople-dev (>= 0.5.0),
  kdepimlibs5-dev,
  libotr5-dev,
  libgcrypt11-dev,
+ extra-cmake-modules (>= 0.11),
+ qtdeclarative5-dev,
+ libkf5coreaddons-dev,
+ libkf5notifications-dev,
+ kio-dev,
+ libkf5widgetsaddons-dev,
+ libkf5kcmutils-dev,
+ libkf5notifyconfig-dev,
+ libkf5texteditor-dev,
+ libkf5wallet-dev,
+ libkf5config-dev,
+ libkf5windowsystem-dev,
+ libkf5iconthemes-dev,
+ libaccounts-qt5-dev (>= 1.10),
 Standards-Version: 3.9.6
 Section: libs
 Homepage: https://projects.kde.org/projects/kde/kdenetwork/ktp-common-internals
