remove the private suffix from the package names in the control file too

--- a/debian/control
+++ b/debian/control
@@ -32,13 +32,13 @@ Homepage: https://projects.kde.org/projects/kde/kdenetwork/ktp-common-internals
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/kde-telepathy/ktp-common-internals.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/kde-telepathy/ktp-common-internals.git
 
-Package: libktpcommoninternalsprivate-dev
+Package: libktpcommoninternals-dev
 Section: libdevel
 Architecture: any
-Depends: libktpcommoninternalsprivate9 (= ${binary:Version}),
- libktpwidgetsprivate9 (= ${binary:Version}),
- libktploggerprivate9 (= ${binary:Version}),
- libktpotrprivate9 (= ${binary:Version}),
+Depends: libktpcommoninternals9 (= ${binary:Version}),
+ libktpwidgets9 (= ${binary:Version}),
+ libktplogger9 (= ${binary:Version}),
+ libktpotr9 (= ${binary:Version}),
  ${misc:Depends}
 Description: KDE Telepathy internal library - Development headers
  Internal library which consists of the most reused
@@ -51,7 +51,7 @@ Description: KDE Telepathy internal library - Development headers
  outside of the KDE Telepathy project umbrella. This package
  is only provided for compiling the rest of the components.
 
-Package: libktpcommoninternalsprivate9
+Package: libktpcommoninternals9
 Replaces: libktpcommoninternalsprivate6 (<< 0.7.80)
 Breaks: libktpcommoninternalsprivate6 (<< 0.7.80)
 Architecture: any
@@ -63,7 +63,7 @@ Description: KDE Telepathy common internal library
  .
  This contains the generic common components.
 
-Package: libktpmodelsprivate9
+Package: libktpmodels9
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: KDE Telepathy data models internal library
@@ -72,7 +72,7 @@ Description: KDE Telepathy data models internal library
  .
  This includes Qt models.
 
-Package: libktpwidgetsprivate9
+Package: libktpwidgets9
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: KDE Telepathy common internal widgets library
@@ -81,7 +81,7 @@ Description: KDE Telepathy common internal widgets library
  .
  This also includes common widgets like the contact grid.
 
-Package: libktploggerprivate9
+Package: libktplogger9
 Breaks: libktploggerprivate7 (<< 0.8.80~)
 Replaces: libktploggerprivate7 (<< 0.8.80~)
 Architecture: any
@@ -92,7 +92,7 @@ Description: KDE Telepathy internal logger library
  .
  This includes the shared KDE-Telepathy logger service.
 
-Package: libktpotrprivate9
+Package: libktpotr9
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: KDE Telepathy internal OTR library
@@ -119,11 +119,11 @@ Description: Shared data for all the KDE Telepathy components
  Telepathy components, and include files such as icons and
  translations.
 
-Package: libktpcommoninternalsprivate-dbg
+Package: libktpcommoninternals-dbg
 Architecture: any
 Section: debug
 Priority: extra
-Depends: libktpcommoninternalsprivate9 (= ${binary:Version}), ${misc:Depends}
+Depends: libktpcommoninternals9 (= ${binary:Version}), ${misc:Depends}
 Description: KDE Telepathy internal library - debug symbols
  Internal library which consists of the most reused
  parts across KDE Telepathy.
