--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9), cmake,
  libtelepathy-logger-dev,
  pkg-kde-tools,
  kdelibs5-dev,
- libkpeople-dev (>= 0.5.0),
+ libkf5people-dev (>= 0.5.0),
  kdepimlibs5-dev,
  libotr5-dev,
  libgcrypt11-dev,
@@ -55,7 +55,7 @@ Package: libktpcommoninternals9
 Replaces: libktpcommoninternalsprivate6 (<< 0.7.80)
 Breaks: libktpcommoninternalsprivate6 (<< 0.7.80)
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libkpeople4 (>= 0.3.0),
+Depends: ${shlibs:Depends}, ${misc:Depends}, libkf5kpeople5 (>= 0.3.0),
  libtelepathy-logger-qt4-1 (>= 0.8.0)
 Description: KDE Telepathy common internal library
  Internal library which consists of the most reused
