--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,7 @@ Homepage: https://projects.kde.org/projects/kde/kdenetwork/ktp-common-internals
 Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-extras/kde-telepathy/ktp-common-internals.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-extras/kde-telepathy/ktp-common-internals.git
 
-Package: libktpcommoninternals-dev
+Package: libktp-dev
 Section: libdevel
 Architecture: any
 Depends: libktpcommoninternals9 (= ${binary:Version}),
@@ -40,6 +40,8 @@ Depends: libktpcommoninternals9 (= ${binary:Version}),
  libktplogger9 (= ${binary:Version}),
  libktpotr9 (= ${binary:Version}),
  ${misc:Depends}
+Breaks: libktpcommoninternalsprivate-dev (<< 15.03.80)
+Replaces: libktpcommoninternalsprivate-dev (<< 15.03.80)
 Description: KDE Telepathy internal library - Development headers
  Internal library which consists of the most reused
  parts across KDE Telepathy.
