Add even more libraries to build depends.
qtdeclarative5-dev, libtelepathy-logger-qt-dev, libkaccounts-dev,
libsignon-qt5-dev, libkf5kpeople qtdeclarative5-dev,
libtelepathy-logger-qt-dev, libkaccounts-dev, libsignon-qt5-dev,
libkf5kpeople

--- a/debian/control
+++ b/debian/control
@@ -3,29 +3,31 @@ Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Diane Trout <diane@debian.org>, Michał Zając <quintasan@kubuntu.org>, Mark Purcell <msp@debian.org>
 Build-Depends: debhelper (>= 9), cmake,
+ pkg-kde-tools,
+ extra-cmake-modules (>= 0.11),
+ qtdeclarative5-dev,
+ kdelibs5-dev,
+ kdepimlibs5-dev,
+ kio-dev,
+ libaccounts-qt5-dev (>= 1.10),
+ libgcrypt11-dev,
+ libotr5-dev,
  libtelepathy-qt5-dev (>= 0.9.5),
  libtelepathy-logger-qt-dev (>= 15.04),
  libtelepathy-logger-dev,
- pkg-kde-tools,
- kdelibs5-dev,
- libkf5people-dev (>= 0.5.0),
- kdepimlibs5-dev,
- libotr5-dev,
- libgcrypt11-dev,
- extra-cmake-modules (>= 0.11),
- qtdeclarative5-dev,
+ libkaccounts-dev,
+ libkf5config-dev,
  libkf5coreaddons-dev,
- libkf5notifications-dev,
- kio-dev,
- libkf5widgetsaddons-dev,
  libkf5kcmutils-dev,
+ libkf5iconthemes-dev,
+ libkf5notifications-dev,
  libkf5notifyconfig-dev,
+ libkf5people-dev (>= 0.5.0),
  libkf5texteditor-dev,
  libkf5wallet-dev,
- libkf5config-dev,
+ libkf5widgetsaddons-dev,
  libkf5windowsystem-dev,
- libkf5iconthemes-dev,
- libaccounts-qt5-dev (>= 1.10),
+ libsignon-qt5-dev,
 Standards-Version: 3.9.6
 Section: libs
 Homepage: https://projects.kde.org/projects/kde/kdenetwork/ktp-common-internals
