--- a/debian/control
+++ b/debian/control
@@ -151,7 +151,7 @@ Section: kde
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: kaccounts plugins for kde-telepathy
- This links kde telepathy to kaccounts and vice versa, allowing migrating
+ This links KDE telepathy to kaccounts and vice versa, allowing migrating
  settings from telepathy internal storage to a system-wide shared accounts
  management system.
  .
