--- a/KTp/CMakeLists.txt
+++ b/KTp/CMakeLists.txt
@@ -105,21 +105,18 @@ target_include_directories(KTpCommonInternals PUBLIC ${TELEPATHY_QT5_INCLUDE_DIR
 
 install (TARGETS KTpCommonInternals
          EXPORT KTpTargets
-         ${INSTALL_TARGETS_DEFAULT_ARGS}
+         ${KDE_INSTALL_TARGETS_DEFAULT_ARGS}
 )
 
 install (FILES ${ktp_common_internals_private_HDRS}
-         DESTINATION ${INCLUDE_INSTALL_DIR}/KTp
+         DESTINATION ${KDE_INSTALL_INCLUDEDIR}/KTp
 )
 
 add_subdirectory(Declarative)
 add_subdirectory(Models)
 add_subdirectory(Widgets)
 add_subdirectory(Logger)
-
-if (OTR_LIBS_FOUND)
-    add_subdirectory(OTR)
-endif (OTR_LIBS_FOUND)
+add_subdirectory(OTR)
 
 # API docs
 find_package(Doxygen)
