--- a/otr-proxy/data/CMakeLists.txt
+++ b/otr-proxy/data/CMakeLists.txt
@@ -4,4 +4,4 @@ configure_file(org.freedesktop.Telepathy.Client.KTp.Proxy.service.in
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/org.freedesktop.Telepathy.Client.KTp.Proxy.service
         DESTINATION ${DBUS_SERVICES_INSTALL_DIR})
-install(FILES KTp.Proxy.client DESTINATION ${SHARE_INSTALL_PREFIX}/telepathy/clients/)
+install(FILES KTp.Proxy.client DESTINATION ${KDE_INSTALL_DATAROOTDIR}/telepathy/clients/)
