Update build-deps and deps with the info from cmake

--- a/debian/control
+++ b/debian/control
@@ -10,21 +10,21 @@ Build-Depends: cmake (>= 2.8.12~),
                doxygen,
                extra-cmake-modules (>= 5~),
                gettext,
-               kio-dev,
+               kio-dev (>= 5.11~),
                libaccounts-qt5-dev (>= 1.10~),
                libgcrypt20-dev,
                libkaccounts-dev,
-               libkf5config-dev,
-               libkf5coreaddons-dev,
-               libkf5iconthemes-dev,
-               libkf5kcmutils-dev,
-               libkf5notifications-dev,
-               libkf5notifyconfig-dev,
-               libkf5people-dev (>= 0.5~),
-               libkf5texteditor-dev,
-               libkf5wallet-dev,
-               libkf5widgetsaddons-dev,
-               libkf5windowsystem-dev,
+               libkf5config-dev (>= 5.11~),
+               libkf5coreaddons-dev (>= 5.11~),
+               libkf5iconthemes-dev (>= 5.11~),
+               libkf5kcmutils-dev (>= 5.11~),
+               libkf5notifications-dev (>= 5.11~),
+               libkf5notifyconfig-dev (>= 5.11~),
+               libkf5people-dev (>= 5.11~),
+               libkf5texteditor-dev (>= 5.11~),
+               libkf5wallet-dev (>= 5.11~),
+               libkf5widgetsaddons-dev (>= 5.11~),
+               libkf5windowsystem-dev (>= 5.11~),
                libotr5-dev (>= 4.0.0~),
                libtelepathy-logger-qt-dev (>= 0.9.80),
                libtelepathy-qt5-dev (>= 0.9.5),
