Update libktpcommoninternals9 qt logger dependency to libtelepathy-logger-qt5 (>= 15.04)

--- a/debian/control
+++ b/debian/control
@@ -60,7 +60,7 @@ Replaces: libktpcommoninternalsprivate6 (<< 0.7.80)
 Breaks: libktpcommoninternalsprivate6 (<< 0.7.80)
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libkf5people5 (>= 0.3.0),
- libtelepathy-logger-qt4-1 (>= 0.8.0)
+ libtelepathy-logger-qt5 (>= 15.04)
 Description: KDE Telepathy common internal library
  Internal library which consists of the most reused
  parts across KDE Telepathy.
