--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 
-include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
-
 override_dh_strip:
-	$(overridden_command) --dbg-package=libktp-dbg
+	$(overridden_command) --dbg-package=libktp-dbg --with kf5
 
 .PHONY: override_dh_auto_test
