--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,9 @@
 #!/usr/bin/make -f
 
+%:
+	dh $@ --with kf5
+
 override_dh_strip:
-	$(overridden_command) --dbg-package=libktp-dbg --with kf5
+	$(overridden_command) --dbg-package=libktp-dbg
 
 .PHONY: override_dh_auto_test
