--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,6 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ --with kf5
-
-override_dh_strip:
-	$(overridden_command) --dbg-package=libktp-dbg
+	dh $@ --with kf5 --dbg-package=libktp-dbg
 
 .PHONY: override_dh_auto_test
