--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends: cmake (>= 2.8.12~),
                libaccounts-qt5-dev (>= 1.10~),
                libgcrypt20-dev,
                libsignon-qt5-dev,
-               libkaccounts-qt5-dev,
+               libkaccounts-dev,
                libkf5config-dev (>= 5.11~),
                libkf5coreaddons-dev (>= 5.11~),
                libkf5iconthemes-dev (>= 5.11~),
