--- a/debian/rules
+++ b/debian/rules
@@ -6,4 +6,4 @@ override_dh_install:
 	dh_install --list-missing
 
 override_dh_strip:
-	$(overridden_command) --ddeb-migration='libktp-dbg (<= 15.12.1-1~~)'
+	$(overridden_command) --dbgsym-migration='libktp-dbg (<= 15.12.1-1~~)'
