--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: cmake (>= 2.8.12~),
                kio-dev (>= 5.11~),
                libaccounts-qt5-dev (>= 1.10~),
                libgcrypt20-dev,
-               libkaccounts-dev,
+               libkaccounts-dev (>= 4:15.12.2),
                libkf5config-dev (>= 5.11~),
                libkf5coreaddons-dev (>= 5.11~),
                libkf5iconthemes-dev (>= 5.11~),
@@ -62,7 +62,7 @@ Description: KDE Telepathy internal library - Development headers
 
 Package: libktpcommoninternals9
 Architecture: any
-Depends: kaccounts-integration (>= 15.04),
+Depends: kaccounts-integration (>= 4:15.12.2),
          libkf5people5 (>= 0.3.0),
          libtelepathy-logger-qt5 (>= 15.04),
          telepathy-accounts-signon,
