--- a/debian/control
+++ b/debian/control
@@ -34,8 +34,8 @@ Build-Depends: cmake (>= 2.8.12~),
                qtdeclarative5-dev (>= 5.4)
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/extragear/network/telepathy/ktp-common-internals
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/ktp-common-internals.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/ktp-common-internals.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/ktp-common-internals.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/ktp-common-internals.git
 
 Package: libktp-dev
 Section: libdevel
