--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Diane Trout <diane@ghic.org>,
            Michał Zając <quintasan@kubuntu.org>,
-           Mark Purcell <msp@debian.org>
+           Mark Purcell <msp@debian.org>,
 Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                doxygen,
@@ -32,11 +32,54 @@ Build-Depends: cmake (>= 2.8.12~),
                libtelepathy-qt5-dev (>= 0.9.5),
                pkg-kde-tools (>> 0.15.15),
                qtbase5-dev (>= 5.4),
-               qtdeclarative5-dev (>= 5.4)
+               qtdeclarative5-dev (>= 5.4),
 Standards-Version: 3.9.8
 Homepage: https://projects.kde.org/projects/extragear/network/telepathy/ktp-common-internals
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/ktp-common-internals.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/ktp-common-internals.git
+
+Package: kde-telepathy-data
+Section: kde
+Architecture: all
+Depends: ${misc:Depends}
+Description: Shared data for all the KDE Telepathy components
+ This package contains KDE Telepathy shared data.
+ .
+ These various data files are used by nearly all the different KDE
+ Telepathy components, and include files such as icons and
+ translations.
+
+Package: kde-telepathy-debugger
+Priority: optional
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Debugging tool for KDE Telepathy
+ This package contains a GUI debugging tool which can be used to debug
+ issues in Telepathy.
+ .
+ It will show the debugging messages from the various telepathy
+ components.
+
+Package: kde-telepathy-kaccounts
+Section: kde
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: kaccounts plugins for kde-telepathy
+ This links KDE telepathy to kaccounts and vice versa, allowing migrating
+ settings from telepathy internal storage to a system-wide shared accounts
+ management system.
+ .
+ This contains plugins to work with kaccounts.
+
+Package: kde-telepathy-kpeople
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: kde-telepathy-data (<< 0.9.0)
+Replaces: kde-telepathy-data (<< 0.9.0)
+Description: kpeople plugins for kde-telepathy
+ This contains plugins to allow kde-telepathy to use kpeople,
+ This is necessary for grouping multiple IM accounts into
+ meta-contacts.
 
 Package: libktp-dev
 Section: libdevel
@@ -48,7 +91,7 @@ Depends: libkf5wallet-dev (>= 5.11~),
          libktpotr9 (= ${binary:Version}),
          libktpwidgets9 (= ${binary:Version}),
          libtelepathy-logger-qt-dev (>= 15.04),
-         ${misc:Depends}
+         ${misc:Depends},
 Breaks: libktpcommoninternalsprivate-dev (<< 15.03.80)
 Replaces: libktpcommoninternalsprivate-dev (<< 15.03.80)
 Description: KDE Telepathy internal library - Development headers
@@ -69,34 +112,17 @@ Depends: kaccounts-integration (>= 15.04),
          libtelepathy-logger-qt5 (>= 15.04),
          telepathy-accounts-signon,
          ${misc:Depends},
-         ${shlibs:Depends}
+         ${shlibs:Depends},
 Recommends: kde-telepathy-kaccounts (= ${binary:Version}),
-            kde-telepathy-kpeople (= ${binary:Version})
+            kde-telepathy-kpeople (= ${binary:Version}),
 Replaces: libktpcommoninternalsprivate6 (<< 0.7.80)
-Breaks: libktpcommoninternalsprivate6 (<< 0.7.80), libktpcommoninternalsprivate7
+Breaks: libktpcommoninternalsprivate6 (<< 0.7.80),
+        libktpcommoninternalsprivate7,
 Description: KDE Telepathy common internal library
  Internal library which consists of the most reused
  parts across KDE Telepathy.
  .
  This contains the generic common components.
-
-Package: libktpmodels9
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: KDE Telepathy data models internal library
- Internal library which consists of the most reused
- parts across KDE Telepathy.
- .
- This includes Qt models.
-
-Package: libktpwidgets9
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: KDE Telepathy common internal widgets library
- Internal library which consists of the most reused
- parts across KDE Telepathy.
- .
- This also includes common widgets like the contact grid.
 
 Package: libktplogger9
 Architecture: any
@@ -109,6 +135,15 @@ Description: KDE Telepathy internal logger library
  .
  This includes the shared KDE-Telepathy logger service.
 
+Package: libktpmodels9
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: KDE Telepathy data models internal library
+ Internal library which consists of the most reused
+ parts across KDE Telepathy.
+ .
+ This includes Qt models.
+
 Package: libktpotr9
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
@@ -120,6 +155,15 @@ Description: KDE Telepathy internal OTR library
  .
  This includes components to support OTR
 
+Package: libktpwidgets9
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: KDE Telepathy common internal widgets library
+ Internal library which consists of the most reused
+ parts across KDE Telepathy.
+ .
+ This also includes common widgets like the contact grid.
+
 Package: qml-module-org-kde-telepathy
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
@@ -129,46 +173,3 @@ Description: kde-telepathy QtDeclarative QML support
  Contains a plugin for QtDeclarative that provides
  support for using KDE-Telepathy to components written
  in QML.
-
-Package: kde-telepathy-data
-Section: kde
-Architecture: all
-Depends: ${misc:Depends}
-Description: Shared data for all the KDE Telepathy components
- This package contains KDE Telepathy shared data.
- .
- These various data files are used by nearly all the different KDE
- Telepathy components, and include files such as icons and
- translations.
-
-Package: kde-telepathy-kpeople
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: kde-telepathy-data (<< 0.9.0)
-Replaces: kde-telepathy-data (<< 0.9.0)
-Description: kpeople plugins for kde-telepathy
- This contains plugins to allow kde-telepathy to use kpeople,
- This is necessary for grouping multiple IM accounts into
- meta-contacts.
-
-Package: kde-telepathy-kaccounts
-Section: kde
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: kaccounts plugins for kde-telepathy
- This links KDE telepathy to kaccounts and vice versa, allowing migrating
- settings from telepathy internal storage to a system-wide shared accounts
- management system.
- .
- This contains plugins to work with kaccounts.
-
-Package: kde-telepathy-debugger
-Priority: extra
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: Debugging tool for KDE Telepathy
- This package contains a GUI debugging tool which can be used to debug
- issues in Telepathy.
- .
- It will show the debugging messages from the various telepathy
- components.
